--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
 
-    <title>Poznaj słoneczny stan - blog o Kalifornii</title>
+    <title>Portfolio website</title>
     <meta name="author" content="Arthur Strzewiczek">
     <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE">
     <meta name="keywords" content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools">
