--- a/index.html
+++ b/index.html
@@ -33,11 +33,12 @@
           <div class="line"></div>
           <div class="line"></div>
         </div>
-        <h1 class="ml-3"><img class="static" src="img/wink2.jpg"><img class="active" src="img/wink.gif"><span>strevitz</span></h1>
+        <h1 class="ml-3"><a href="index.html"><img class="static" src="img/wink2.jpg"><img class="active" src="img/wink.gif"><span>strevitz</span></a></h1>
         <ul class="nav-links">
-          <li><a data-page="home" href="#">about me</a></li>
-          <li><a data-page="project" href="#">projects</a></li>
-          <li><a data-page="contact" href="#">contact</a></li>
+          <li><a class="list-item" data-page="home" href="#">about me</a></li>
+          <li><a class="list-item" data-page="project" href="#">projects</a></li>
+          <li><a class="list-item" data-page="contact" href="#">contact</a></li>
+          <li><a class="list-item" data-page="quiz" href="quiz.html">quiz!</a></li>
           <div class="bubble"></div>
         </ul>
       </nav>
@@ -47,18 +48,20 @@
     <main>
 
       <section data-index="0" class="home">
+
+        <img id="avatar" src="img/IMG_20200114_184556.jpg" alt="visit me on LinkedIn">
+
         <h2 id="headline1">hello</h2>
         <p id="firsttext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repellat odit accusantium vel ipsa sequi accusamus corporis ratione fugiat ut doloribus magnam dolorem dolor, perspiciatis recusandae cupiditate veniam tempore repellendus sapiente, quisquam debitis unde suscipit assumenda! Quaerat corrupti asperiores modi voluptatum officiis. Ullam, laudantium libero, porro eos repellendus cupiditate quod assumenda soluta quae omnis excepturi rem, voluptas vitae harum similique obcaecati nam vero ex expedita! Ex rerum dolorum cum, nihil blanditiis omnis explicabo dignissimos, itaque eos asperiores ipsa reiciendis saepe.</p>
+
       </section>
 
-      <img id="linkedin" src="img/linkedin-circled-shake.gif" alt="visit me on LinkedIn">
-
-      <img id="avatar" src="img/IMG_20200114_184556.jpg" alt="visit me on LinkedIn">
-
-      <div class="circle1"></div>
-      <div class="circle2"></div>
-
       <section data-index="1" class="project">
+
+        <div class="circle1"></div>
+        <img id="github" src="img/FAVPNG_github-logo_1DHJEaSN.png" alt="my Github">
+
+
         <h2 id="headline2">projects</h2>
         <!--
         <div class="gallery">
@@ -73,54 +76,62 @@
       -->
       </section>
 
-      <img id="github" src="img/FAVPNG_github-logo_1DHJEaSN.png" alt="my Github">
-
       <section data-index="2" class="contact">
+
+        <div class="circle2"></div>
+        <img id="linkedin" src="img/linkedin-circled-shake.gif" alt="visit me on LinkedIn">
+
         <h2 id="headline3">contact</h2>
 
-        <div class="form col-6 pt-3">
+        <div class="contact-box">
 
-          <div class="name-form">
-            <input type="text" name="name" autocomplete="off" required>
-            <label for="name" class="label-name">
-              <span class="content-name">name</span>
-            </label>
+          <div class="form">
+
+            <div class="name-form">
+              <input type="text" name="name" autocomplete="off" required>
+              <label for="name" class="label-name">
+                <span class="content-name">name</span>
+              </label>
+            </div>
+
+            <div class="name-form">
+              <input type="text" name="name" autocomplete="off" required>
+              <label for="name" class="label-name">
+                <span class="content-name">tel</span>
+              </label>
+            </div>
+
+            <div class="name-form">
+              <input type="text" name="name" autocomplete="off" required>
+              <label for="name" class="label-name">
+                <span class="content-name">e-mail</span>
+              </label>
+            </div>
+
+            <div class="name-form">
+              <input type="textarea" name="name" autocomplete="off" required>
+              <label for="name" class="label-name">
+                <span class="content-name">message</span>
+              </label>
+            </div>
+            <button class="btn btn-warning mt-3">submit</button>
           </div>
 
-          <div class="name-form">
-            <input type="text" name="name" autocomplete="off" required>
-            <label for="name" class="label-name">
-              <span class="content-name">tel</span>
-            </label>
+          <div class="contact-info">
+            <a href="#" class="contact-item" >+48 519 603 221</a>
+            <a href="#" class="contact-item" >arthur@strzewiczek.pl</a>
+            <a href="#" class="contact-item" >Skype: arthur.strzewiczek</a>
           </div>
 
-          <div class="name-form">
-            <input type="text" name="name" autocomplete="off" required>
-            <label for="name" class="label-name">
-              <span class="content-name">e-mail</span>
-            </label>
-          </div>
-
-          <div class="name-form">
-            <input type="textarea" name="name" autocomplete="off" required>
-            <label for="name" class="label-name">
-              <span class="content-name">message</span>
-            </label>
-          </div>
-          <button class="btn btn-warning mt-3">submit</button>
-        </div>
-
-        <div class="contact-info col-6 pt-5">
-          <a href="#" class="contact-item" >+48 519 603 221</a>
-          <a href="#" class="contact-item" >arthur@strzewiczek.pl</a>
-          <a href="#" class="contact-item" >Skype: strzewiczek</a>
         </div>
 
       </section>
 
-      <footer>
+      <footer class="quiz-footer">
 
-        <span>Thank you for your visit my gorgeous friends! &copy; 2020 Arthur Strzewiczek</span>
+        <div class="footer-text-box">
+         <span>Thank you for your visit my gorgeous friends! &copy; 2020 Arthur Strzewiczek</span>
+        </div>
 
       </footer>
 
