--- a/index.html
+++ b/index.html
@@ -3,28 +3,42 @@
 <!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html lang="pl"><!--<![endif]-->
-
   <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Portfolio website</title>
-    <meta name="author" content="Arthur Strzewiczek">
-    <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE">
-    <meta name="keywords" content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools">
+    <meta name="author" content="Arthur Strzewiczek" />
+    <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE" />
+    <meta
+      name="keywords"
+      content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools"
+    />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="js/jquery-ui-1.12.1/jquery-ui.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="main.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css"
+    />
   </head>
 
   <body>
-
-   <!-- <div class="cursor">as</div> -->
+    <!-- <div class="cursor">as</div> -->
 
     <header>
       <nav>
@@ -33,39 +47,74 @@
           <div class="line"></div>
           <div class="line"></div>
         </div>
-        <h1 class="ml-3"><a href="index.html"><img class="static" src="img/wink2.jpg"><img class="active" src="img/wink.gif"><span>strevitz</span></a></h1>
+        <h1 class="ml-3">
+          <a href="index.html"
+            ><img class="static" src="img/wink2.jpg" /><img
+              class="active"
+              src="img/wink.gif"
+            /><span>strevitz</span></a
+          >
+        </h1>
         <ul class="nav-links">
           <li><a class="list-item" data-page="home" href="#">about me</a></li>
-          <li><a class="list-item" data-page="project" href="#">projects</a></li>
+          <li>
+            <a class="list-item" data-page="project" href="#">projects</a>
+          </li>
           <li><a class="list-item" data-page="contact" href="#">contact</a></li>
-          <li><a class="list-item" data-page="quiz" href="quiz.html">quiz!</a></li>
+          <li>
+            <a class="list-item" data-page="quiz" href="quiz.html">quiz!</a>
+          </li>
           <div class="bubble"></div>
         </ul>
       </nav>
-
     </header>
 
     <main>
-
       <section data-index="0" class="home">
-
-        <img id="avatar" src="img/IMG_20200114_184556.jpg" alt="visit me on LinkedIn">
+        <img
+          id="avatar"
+          src="img/IMG_20200114_184556.jpg"
+          alt="visit me on LinkedIn"
+        />
 
         <h2 id="headline1">hello</h2>
-        <p id="firsttext">Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto repellat odit accusantium vel ipsa sequi accusamus corporis ratione fugiat ut doloribus magnam dolorem dolor, perspiciatis recusandae cupiditate veniam tempore repellendus sapiente, quisquam debitis unde suscipit assumenda! Quaerat corrupti asperiores modi voluptatum officiis. Ullam, laudantium libero, porro eos repellendus cupiditate quod assumenda soluta quae omnis excepturi rem, voluptas vitae harum similique obcaecati nam vero ex expedita! Ex rerum dolorum cum, nihil blanditiis omnis explicabo dignissimos, itaque eos asperiores ipsa reiciendis saepe.</p>
-
+        <p id="firsttext">
+          Lorem ipsum dolor sit amet consectetur adipisicing elit. Iusto
+          repellat odit accusantium vel ipsa sequi accusamus corporis ratione
+          fugiat ut doloribus magnam dolorem dolor, perspiciatis recusandae
+          cupiditate veniam tempore repellendus sapiente, quisquam debitis unde
+          suscipit assumenda! Quaerat corrupti asperiores modi voluptatum
+          officiis. Ullam, laudantium libero, porro eos repellendus cupiditate
+          quod assumenda soluta quae omnis excepturi rem, voluptas vitae harum
+          similique obcaecati nam vero ex expedita! Ex rerum dolorum cum, nihil
+          blanditiis omnis explicabo dignissimos, itaque eos asperiores ipsa
+          reiciendis saepe.
+        </p>
       </section>
 
       <section data-index="1" class="project">
-
         <h2 id="headline2">projects</h2>
 
         <!-- github  -->
-        <a href="https://github.com/Strevitz" target="_blank" class="github-corner" aria-label="View source on GitHub">
+        <a
+          href="https://github.com/Strevitz"
+          target="_blank"
+          class="github-corner"
+          aria-label="View source on GitHub"
+        >
           <svg width="80" height="80" viewBox="0 0 250 250" aria-hidden="true">
             <path d="M0,0 L115,115 L130,115 L142,142 L250,250 L250,0 Z"></path>
-            <path d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2" fill="currentColor" style="transform-origin: 130px 106px;" class="octo-arm"></path>
-            <path d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z" fill="currentColor" class="octo-body"></path>
+            <path
+              d="M128.3,109.0 C113.8,99.7 119.0,89.6 119.0,89.6 C122.0,82.7 120.5,78.6 120.5,78.6 C119.2,72.0 123.4,76.3 123.4,76.3 C127.3,80.9 125.5,87.3 125.5,87.3 C122.9,97.6 130.6,101.9 134.4,103.2"
+              fill="currentColor"
+              style="transform-origin: 130px 106px;"
+              class="octo-arm"
+            ></path>
+            <path
+              d="M115.0,115.0 C114.9,115.1 118.7,116.5 119.8,115.4 L133.7,101.6 C136.9,99.2 139.9,98.4 142.2,98.6 C133.8,88.0 127.5,74.4 143.8,58.0 C148.5,53.4 154.0,51.2 159.7,51.0 C160.3,49.4 163.2,43.6 171.4,40.1 C171.4,40.1 176.1,42.5 178.8,56.2 C183.1,58.6 187.2,61.8 190.9,65.4 C194.5,69.0 197.7,73.2 200.1,77.6 C213.8,80.2 216.3,84.9 216.3,84.9 C212.7,93.1 206.9,96.0 205.4,96.6 C205.1,102.4 203.0,107.8 198.3,112.5 C181.9,128.9 168.3,122.5 157.7,114.1 C157.9,116.9 156.7,120.9 152.7,124.9 L141.0,136.5 C139.8,137.7 141.6,141.9 141.8,141.8 Z"
+              fill="currentColor"
+              class="octo-body"
+            ></path>
           </svg>
         </a>
 
@@ -79,45 +128,48 @@
           <a href="#" id="titleTooltip5"><img src="img/tabuli_about.png" alt="Image 5" /></a>
         </div>
       </div>
-      -->
-
-      </section>
+      --></section>
 
       <section data-index="2" class="contact">
-
         <!-- linkedin  -->
         <h3 class="linkedin">in</h3>
-        <svg class="linkedin-triangle" width="80" height="80" viewBox="0 0 250 250" aria-hidden="true"><path d="M0,0 L115,115 L142,142 L250,250 L250,0 Z"></path></svg>
+        <svg
+          class="linkedin-triangle"
+          width="80"
+          height="80"
+          viewBox="0 0 250 250"
+          aria-hidden="true"
+        >
+          <path d="M0,0 L115,115 L142,142 L250,250 L250,0 Z"></path>
+        </svg>
 
         <h2 id="headline3">contact</h2>
 
         <div class="contact-box">
-
           <div class="form">
-
             <div class="name-form">
-              <input type="text" name="name" autocomplete="off" required>
+              <input type="text" name="name" autocomplete="off" required />
               <label for="name" class="label-name">
                 <span class="content-name">name</span>
               </label>
             </div>
 
             <div class="name-form">
-              <input type="text" name="name" autocomplete="off" required>
+              <input type="text" name="name" autocomplete="off" required />
               <label for="name" class="label-name">
                 <span class="content-name">tel</span>
               </label>
             </div>
 
             <div class="name-form">
-              <input type="text" name="name" autocomplete="off" required>
+              <input type="text" name="name" autocomplete="off" required />
               <label for="name" class="label-name">
                 <span class="content-name">e-mail</span>
               </label>
             </div>
 
             <div class="name-form">
-              <input type="textarea" name="name" autocomplete="off" required>
+              <input type="textarea" name="name" autocomplete="off" required />
               <label for="name" class="label-name">
                 <span class="content-name">message</span>
               </label>
@@ -126,40 +178,43 @@
           </div>
 
           <div class="contact-info">
-            <a href="#" class="contact-item" >+48 519 603 221</a>
-            <a href="#" class="contact-item" >arthur@strzewiczek.pl</a>
-            <a href="#" class="contact-item" >Skype: arthur.strzewiczek</a>
-            <a href="#" class="contact-item" >Twitter: @strzewiczek</a>
+            <a href="#" class="contact-item">+48 519 603 221</a>
+            <a href="#" class="contact-item">arthur@strzewiczek.pl</a>
+            <a href="#" class="contact-item">Skype: arthur.strzewiczek</a>
+            <a href="#" class="contact-item">Twitter: @strzewiczek</a>
           </div>
-
         </div>
-
       </section>
 
       <footer class="quiz-footer">
-
         <div class="footer-text-box">
-         <span>Thank you for your visit my gorgeous friends! &copy; 2020 Arthur Strzewiczek</span>
+          <span
+            >Thank you for your visit my gorgeous friends! &copy; 2020 Arthur
+            Strzewiczek</span
+          >
         </div>
-
       </footer>
-
     </main>
 
-
     <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
     <script src="js/content.js"></script>
-    <script src="jQuery-Waterwheel-Carousel/js/jquery.waterwheelCarousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
-
   </body>
-
-  </html>
+</html>
