--- a/quiz.html
+++ b/quiz.html
@@ -3,28 +3,42 @@
 <!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
 <!--[if IE 8]><html class="preIE9"><![endif]-->
 <!--[if gte IE 9]><!--><html lang="pl"><!--<![endif]-->
-
   <head>
-
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0, shrink-to-fit=no">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
+    <meta charset="UTF-8" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, shrink-to-fit=no"
+    />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
     <title>Portfolio website</title>
-    <meta name="author" content="Arthur Strzewiczek">
-    <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE">
-    <meta name="keywords" content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools">
+    <meta name="author" content="Arthur Strzewiczek" />
+    <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE" />
+    <meta
+      name="keywords"
+      content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools"
+    />
 
-    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css" integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh" crossorigin="anonymous">
-    <link rel="stylesheet" href="js/jquery-ui-1.12.1/jquery-ui.min.css" type="text/css">
-    <link rel="stylesheet" href="main.css" type="text/css">
-    <link rel="stylesheet" href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css">
-
+    <link
+      rel="stylesheet"
+      href="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/css/bootstrap.min.css"
+      integrity="sha384-Vkoo8x4CGsO3+Hhxv8T/Q5PaXtkKtu6ug5TOeNV6gBiFeWPGFN9MuhOf23Q9Ifjh"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="stylesheet"
+      href="js/jquery-ui-1.12.1/jquery-ui.min.css"
+      type="text/css"
+    />
+    <link rel="stylesheet" href="main.css" type="text/css" />
+    <link
+      rel="stylesheet"
+      href="http://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.css"
+    />
   </head>
 
   <body>
-
-   <!-- <div class="cursor">as</div> -->
+    <!-- <div class="cursor">as</div> -->
 
     <header>
       <nav>
@@ -33,19 +47,24 @@
           <div class="line"></div>
           <div class="line"></div>
         </div>
-        <h1 class="ml-3"><a href="index.html"><img class="static" src="img/wink2.jpg"><img class="active" src="img/wink.gif"><span>strevitz</span></a></h1>
+        <h1 class="ml-3">
+          <a href="index.html"
+            ><img class="static" src="img/wink2.jpg" /><img
+              class="active"
+              src="img/wink.gif"
+            /><span>strevitz</span></a
+          >
+        </h1>
         <ul class="nav-links">
           <li><a data-page="contact" href="index.html">exit</a></li>
         </ul>
       </nav>
-
     </header>
 
     <main>
-
       <section data-index="0" class="quiz">
-       <h3>Let's know me a little bit better!</h3>
-       <h2 id="headline4">quiz</h2>
+        <h3>Let's know me a little bit better!</h3>
+        <h2 id="headline4">quiz</h2>
 
         <div class="container">
           <div id="question-container" class="hide">
@@ -62,26 +81,33 @@
             <button id="next-btn" class="next-btn btn hide">next</button>
           </div>
         </div>
-
       </section>
 
       <footer class="quiz-footer">
-
         <div class="footer-text-box">
-         <span>Thank you for your visit my gorgeous friends! &copy; 2020 Arthur Strzewiczek</span>
+          <span
+            >Thank you for your visit my gorgeous friends! &copy; 2020 Arthur
+            Strzewiczek</span
+          >
         </div>
-
       </footer>
-
     </main>
 
-
     <script
-    src="https://code.jquery.com/jquery-3.5.1.js"
-    integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
-    crossorigin="anonymous"></script>
-    <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
-    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js" integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6" crossorigin="anonymous"></script>
+      src="https://code.jquery.com/jquery-3.5.1.js"
+      integrity="sha256-QWo7LDvxbWT2tbbQ97B53yJnYU3WhH/C8ycbRAkjPDc="
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js"
+      integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://stackpath.bootstrapcdn.com/bootstrap/4.4.1/js/bootstrap.min.js"
+      integrity="sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
+      crossorigin="anonymous"
+    ></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/2.1.2/TimelineMax.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/latest/TweenMax.min.js"></script>
     <script src="js/jquery-ui-1.12.1/jquery-ui.min.js"></script>
@@ -89,7 +115,5 @@
     <script src="jQuery-Waterwheel-Carousel/js/jquery.waterwheelCarousel.min.js"></script>
     <script src="https://cdn.jsdelivr.net/qtip2/3.0.3/jquery.qtip.min.js"></script>
     <script src="js/quiz.js"></script>
-
   </body>
-
-  </html>
+</html>
