--- a/quiz.html
+++ b/quiz.html
@@ -1,8 +1,5 @@
 <!DOCTYPE html>
-<!--[if lte IE 6]><html class="preIE7 preIE8 preIE9"><![endif]-->
-<!--[if IE 7]><html class="preIE8 preIE9"><![endif]-->
-<!--[if IE 8]><html class="preIE9"><![endif]-->
-<!--[if gte IE 9]><!--><html lang="pl"><!--<![endif]-->
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -11,12 +8,15 @@
     />
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1" />
 
-    <title>Portfolio website</title>
+    <title>Strzewiczek | Front-End Developer</title>
     <meta name="author" content="Arthur Strzewiczek" />
-    <meta name="description" content="UZUPEŁNIJ I ZNAJDZ OPIS W NECIE" />
+    <meta
+      name="description"
+      content="Front-End design and coding. Clean code, excelent UX, no excuses. Check out my portfolio."
+    />
     <meta
       name="keywords"
-      content="javascript, html, css, less css, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, chrome tools"
+      content="javascript, html, css, scss, web deweloper, bootstrap, sketch, adobe xd, ux, ui, frontend, vanilla, react, node.js, node, php, chrome tools, Front-End, front, end"
     />
 
     <link
